@@ -2,6 +2,10 @@
 
 Changes with Apache 2.3.13
 
+  *) mod_include: Make the "#if expr" element use the new "ap_expr" expression
+     parser. The old parser can still be used by setting the new directive
+     SSILegacyExprParser. [Stefan Fritsch]
+
   *) core: Add some features to ap_expr for use by mod_include: a restricted
      mode that does not allow to bypass request access restrictions; new
      variables DOCUMENT_URI (alias for REQUEST_URI), LAST_MODIFIED; -A as an
